# little_bits_of_buddha

./: .env  .envrc  .gardenignore  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pdm-python  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.org  actions.garden.yml  dapr.yaml  data.json  devbox.json  flake.nix  modules.garden.yml  project.garden.yml  pyproject.toml  workflows.garden.yml
.devcontainer/: devcontainer.json
.s2i/: environment
conf/: set-environment.sh
docs/: 1-pick-a-random-sutta.org  2-echo-sutta-to-web-endpoint.org  data-structure.org
little_bits_of_buddha/: __init__.py  app.hy  app.py  data.hy  data.py  run.py  shim.py
little_bits_of_buddha_worldofgeese/: __main__.py  data.py  run.py
my-chart/: Chart.yaml  devcontainer.json
prebuild-devcontainer/: .devcontainer.json  Dockerfile
src/little_bits_of_buddha_worldofgeese/: __main__.py  app.py  chatbot.py  config.py  data.py  run.py  tokenize_suttas.py
src/openai_service_worldofgeese/: __init__.py  __main__.py  pyproject.toml  requirements.txt
src/telegram_bot_service_worldofgeese/: __init__.py  __main__.py  pyproject.toml  requirements.txt
terraform/: Pulumi.yaml  kubeconfig-template.yaml  main.tf
tests/: test_little_bits_of_buddha.py  test_openai_service.py  test_random_sutta.py  test_tokenize.py
