[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "little_bits_of_buddha_worldofgeese"
version = "0.1.0"
description = "A Telegram bot that interacts with its users as if it were the Buddha"
authors = [
  { name="Tao Hansen", email="5-worldofgeese@users.noreply.gitlab.hansen.agency" },
]
requires-python = ">=3.11"
readme = "README.md"
keywords = [
    "ai",
    "openai",
    "chatbot",
    "telegram",
    "buddhism",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Religion",
    "Framework :: FastAPI",
    "Topic :: Religion",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pytest>=7.2.1",
    "uvicorn>=0.20.0",
    "fastapi>=0.91.0",
    "dapr==1.9.0rc2",
    "dapr-ext-grpc==1.9.0rc2",
    "tiktoken>=0.2.0",
    "httpx>=0.23.3",
]

[project.urls]
"Homepage" = "https://gitlab.hansen.agency/worldofgeese/little_bits_of_buddha"
"Bug Tracker" = "https://gitlab.hansen.agency/worldofgeese/little_bits_of_buddha/-/issues"

# Add src to search paths for successful test linting
[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/", "src"]
python.analysis.extraPaths = ["__pypackages__/3.11/lib/"]

[tool.pdm.dev-dependencies]
dev = [
    "openai[embeddings]>=0.26.5",
    "debugpy>=1.6.6",
    "isort>=5.12.0",
    "black>=23.1.0",
]

# "The path entries are calculated relative to the rootdir, thus the src entry adds path/to/project/src directory to sys.path in this case."
# https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
