[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "little_bits_of_buddha_worldofgeese"
version = "0.1.0"
description = "A Telegram bot that interacts with its users as if it were the Buddha"
authors = [
  { name="Tao Hansen", email="5-worldofgeese@users.noreply.gitlab.hansen.agency" },
]
requires-python = ">=3.11"
readme = "README.md"
keywords = [
    "ai",
    "openai",
    "chatbot",
    "telegram",
    "buddhism",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Religion",
    "Framework :: FastAPI",
    "Topic :: Religion",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pytest>=7.2.1",
    "dapr==1.9.0rc2",
    "dapr-ext-grpc==1.9.0rc2",
    "openai>=0.27.0",
    "triogram>=0.5.0",
    "hypercorn[trio]>=0.14.3",
    "fastapi>=0.92.0",
]

[project.urls]
"Homepage" = "https://gitlab.hansen.agency/worldofgeese/little_bits_of_buddha"
"Bug Tracker" = "https://gitlab.hansen.agency/worldofgeese/little_bits_of_buddha/-/issues"

# Add src to search paths for successful test linting
[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/", "src"]
python.analysis.extraPaths = ["__pypackages__/3.11/lib/"]

[tool.pdm.dev-dependencies]
dev = [
    "debugpy>=1.6.6",
    "isort>=5.12.0",
    "black>=23.1.0",
]

# "The path entries are calculated relative to the rootdir, thus the src entry adds path/to/project/src directory to sys.path in this case."
# https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]

# triogram depends on a very old version of h11 that doesn't work with the latest hypercorn
[tool.pdm.resolution.overrides]
h11 = "=0.14.0"
