[project]
name = "little_bits_of_buddha"
version = "0.1.0"
description = "A Telegram bot that interacts with its users as if it were the Buddha"
authors = [
  { name="Tao Hansen", email="5-worldofgeese@users.noreply.gitlab.hansen.agency" },
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0+"}
keywords = [
    "ai",
    "openai",
    "chatbot",
    "telegram",
    "buddhism",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Religion",
    "Framework :: FastAPI",
    "Topic :: Religion",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://gitlab.hansen.agency/worldofgeese/little_bits_of_buddha"
"Bug Tracker" = "https://gitlab.hansen.agency/worldofgeese/little_bits_of_buddha/-/issues"

# Add src to search paths for successful test linting
[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/", "src"]
python.analysis.extraPaths = ["__pypackages__/3.11/lib/"]

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/src/openai_service_worldofgeese#egg=openai-service-worldofgeese",
    "-e file:///${PROJECT_ROOT}/src/telegram_bot_service_worldofgeese#egg=telegram-bot-service-worldofgeese",
    "debugpy>=1.6.7.post1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "pytest>=7.4.0",
    "pre-commit>=3.3.3",
    "git-filter-repo>=2.38.0",
]
# triogram depends on a very old version of h11 that doesn't work with the latest hypercorn
[tool.pdm.resolution.overrides]
h11 = ">=0.14.0"
httpx = ">=0.24.1"
trio = ">=0.22.0"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


# "The path entries are calculated relative to the rootdir, thus the src entry adds path/to/project/src directory to sys.path in this case."
# https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
